<resources>
    <string name="app_name">UniBiz</string>
    <string name="add_client_label">Add client</string>
    <string name="new_client_price_hint">Price</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="new_client_name_hint">Name</string>
    <string name="button_from_contact">button from contact</string>
    <string name="new_client_master_label">Master</string>
    <string name="new_client_phone_label">Phone number</string>
    <string name="new_client_phones_label">0507 799 559</string>
    <string name="call_button">Call button</string>
    <string name="scanner_mobile_imei">Scanner Mobile IMEI</string>
    <string name="imei_code_hint">13254516321565133</string>
    <string name="time_label">00:00</string>
    <string name="date_label">01/01/2019</string>
    <string name="add_text">add</string>
    <string name="client_item_1_label">Item 1</string>
    <string name="item_label">Item</string>
    <string name="client_items_label">Items</string>
    <string name="_0_number">0</string>
    <string name="msg_when_price_less_10">The price is less 10</string>
    <string name="nothing_to_delete">Nothing to delete</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="permission_accepted">Permission accepted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="msg_for_empty_phone_text">Please enter a valid telephone number</string>
    <string name="new_client_model_hint">Model</string>
    <string name="msg_for_empty_texts">Please fill the fields</string>
    <string name="new_category_label">New Category</string>
    <string name="new_master_label">New Master</string>
    <string name="new_tovar_label">New Product</string>
    <string name="new_client_label">New Client</string>
    <string name="dialog_category_title_label">Title</string>
    <string name="dialog_category_price_label">Price</string>
    <string name="add_category_label">New Category</string>
    <string name="set_image">Set image</string>
    <string name="select_picture_label">Select Picture</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="delete_msg">Are you sure to delete:</string>
    <string name="delete">Delete!</string>
    <string name="new_master_job_hint">Job</string>
    <string name="new_master_sex_hint">Sex</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="new_master_nomer_hint">Nomer</string>
    <string name="new_master_form">New master </string>
    <string name="new_master_email_hint">Email</string>
    <string name="new_master_address_hint">Address</string>
    <string name="new_master_date_born_hint">Date born</string>
    <string name="new_master_date_come_hint">Date come</string>
    <string name="new_product_count_hint">Count</string>
    <string name="new_product_price_hint">Price</string>
    <string name="new_master_date_hint">Date</string>
    <string name="new_master_supplier_hint">Supplier</string>
    <string name="new_master_empl_hint">Employer</string>
    <string name="new_produt_form">New product</string>
    <string name="saved">Saved</string>
    <string name="menu_title_add">Add</string>
    <string name="menu_title_allData">All data</string>
    <string name="menu_title_calendar">Calendar</string>
    <string name="menu_title_reporting">Reporting</string>
    <string name="menu_title_other">Other</string>
    <string name="menu_title_setting">Setting</string>
    <string name="menu_title_about">About</string>
    <string name="dialog_title_about">About</string>
    <string name="master">Master</string>
    <string name="supplier">Supplier</string>
    <string name="klient">Client</string>
    <string name="materials">Material</string>
    <string name="category">Category</string>
    <string name="adding">Add</string>
    <string name="choose_for_add">Choose for add</string>
    <string name="new_master_supplier_form">New Supplier</string>
    <string name="new_supplier_organization_hint">Organization</string>
    <string name="new_supplier_phone_hint">Phone</string>
    <string name="new_supplier_email_hint">Email</string>
    <string name="new_supplier_address_hint">Address</string>
    <string name="new_supplier_datecome_hint">Date come</string>
    <string name="new_supplier_dateout_hint">Date out</string>
    <string name="alldata">All data</string>
    <string name="choose_for_getdata">Choose for get data</string>
    <string name="dialog_title_category_views">Categorys</string>
    <string name="dialog_title_master_views">Masters</string>
    <string name="dialog_title_client_views">Clients</string>
    <string name="dialog_title_product_views">Products</string>
    <string name="dialog_title_supplier_views">Suppliers</string>
    <string name="msg_not_all_fields_filled">Not all fields are filled</string>
    <string name="new_supplier_date_visit_hint">Date visit</string>
    <string name="visit">Visit</string>
    <string name="summa">Summa</string>
    <string name="history_of_orders">History of orders</string>
    <string name="add_new">Add new</string>
    <string name="choose_for_get_report">Choose to get report</string>
    <string name="revenue">Revenue</string>
    <string name="costs">Costs</string>
    <string name="profit">Profit</string>
    <string name="execute">Execute</string>
    <string name="not_exist">Sorry,Not exist</string>
</resources>
