<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:itemIconTint="@color/colorPrimary">
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_add"
            android:title="@string/menu_title_add"
            android:icon="@drawable/menu_add_image"
            />
        <item android:id="@+id/menu_all_data"
            android:title="@string/menu_title_allData"
            android:icon="@drawable/menu_all_data_image"
            />
        <item android:id="@+id/menu_calendar"
            android:title="@string/menu_title_calendar"
            android:icon="@drawable/menu_calendar_image"
            />
        <item android:id="@+id/menu_reporting"
            android:title="@string/menu_title_reporting"
            android:icon="@drawable/menu_report_image"
            />
    </group>
    <item android:title="@string/menu_title_other">
        <menu>
            <item android:id="@+id/menu_setting"
                android:title="@string/menu_title_setting"
                android:icon="@drawable/menu_setting_image"
                />
            <item android:id="@+id/menu_about"
                android:title="@string/menu_title_about"
                android:icon="@drawable/menu_about_image"
                />
        </menu>
    </item>
</menu>